test/compilable/test10339.d
// PERMUTE_ARGS:
void main()
{
    auto name = __MODULE__;
}

