test/fail_compilation/fail298.d
void main()
{
  ulong num1=100;
  int num2=10;
  int result=num1/num2;
}
